# unifiden

./: .dockerignore  .env.example  .gitignore  AGENTSTRESS_SPECIFICATION.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  UNIFIDEN_SPECIFICATION.md  agentstress_complete_spec.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg  unifiden_complete_spec.md
agents/: multi_agent_graph.py  plan_execute_gpt.py  react_claude.py  react_gemini.py  react_gpt.py  reflexion_gpt.py
agentstress/: __init__.py  config.py
analysis/: failure_classifier.py  paper_figures.py  statistics.py  taxonomy_builder.py  unifiden_stats.py
dashboard/: app.py
data/: local_ledger.py
debate/: debate_coordinator.py  debate_helper.py  round_1_runner.py  round_2_reviewer.py  round_3_reviser.py  round_4_judge.py
evaluation/: base_judge.py  human_validator.py  judge_claude.py  judge_gemini.py  judge_gpt.py  rubric_engine.py
experiments/: batch_runner.py  native_pilot.py  paper1_runner.py  paper2_runner.py  pilot_runner.py  pilot_runner_gemini.py
metrics/: advanced_metrics.py  collapse.py  contamination.py  primary_metrics.py  propagation.py  reliability_score.py  stubbornness.py
paper/: draft.tex
scripts/: check_model_versions.py  find_executor.py  list_models.py  rebrand.py  refactor_imports.py
security/: crypto_signer.py
tasks/: adversarial_instructions.json  ambiguous_instructions.json  clear_instructions.json  rubrics.json
tests/: test_agents.py  test_agentstress.py  test_crypto.py  test_debate.py  test_integration.py  test_inter_rater.py  (+2 more)
(+52 files in other folders)
